--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             flex: 1;
             overflow-y: auto;
             min-height: 0;
+            max-height: calc(100vh - 268px);
         }
         
         .file-list-table {
